--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fire": "^0.55.1",
     "firebase": "^9.17.2",
     "icons": "^1.0.0",
+    "next": "^13.4.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
@@ -30,10 +31,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
