--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "firebase": "^9.17.2",
     "icons": "^1.0.0",
     "next": "^13.4.1",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
